  * Drop liblinux-inotify2-perl to Recommends. It is not necessary to use
    inotify and this would allow users of non-Linux ports of debian to use
    debpool.
  * Bumped libproc-daemon-perl up to depends.
    + Changed debpool to not check for existence of Proc::Daemon, since it will
      now be installed by default.
  * Write an entry about dependencies in the README.Debian file.

 -- Andres Mejia <mcitadel@gmail.com>  Thu, 16 Oct 2008 16:55:37 -0400

debpool (0.3.7) experimental; urgency=low

  * Removed unnecessary comments from debian/rules.
  * Removed libcompress-zlib-perl from Recommends. It is not used.
  * Removed libdigest-sha-perl from Recommends as it is provided in perl-5.10.0.
  * Rewrote (slightly) package description.
  * Updated TODO file.

 -- Andres Mejia <mcitadel@gmail.com>  Thu, 16 Oct 2008 12:29:13 -0400

debpool (0.3.6) experimental; urgency=low

  [ Hilko Bengen ]
  * Performed some code cleanups avoid the most serious Perl::Critic
    warnings
  * Changed build process to use ExtUtils::MakeMaker
    - Install modules into VENDORPREFIX.
    - Use POD for the debpool manpage.

  [ Andres Mejia ]
  * New maintainer (Closes: #465937)
  * Added myself and Magnus Holmgren as an uploader.
  * Added udeb support. Thanks Free Ekanayaka. Closes: #245526
  * Fixed problem with packages with multiple '+' characters. Fixes part of bug
    322593.
  * Added Homepage and Vcs entries in control file. Closes: #453905
  * Changed debpool recommends leaving out libdigest-md5-perl. Closes: #454102
  * Fixed problem with missing newlines in .package files.
    + Thanks Timo Weingärtner. Closes: #400402
  * Fixed problem with use of Vcs entries. Closes: #454173
  * Fixed problem with binary only uploads. Closes: #322593
    + Also fixed problem with source only uploads and binary only uploads
      without binary-all packages.
    + Packages should be rejected if dsc file is at a different revision for
      binary only uploads.