@@ -1,3 +1,1 @@
-examples/Config.pm etc/debpool
-
-
+examples/debpoolrc etc/debpool
